--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-use": "^17.6.0",
+    "redux-persist": "^6.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
