--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.3",
+    "react-router": "^7.2.0",
     "react-use": "^17.6.0",
     "redux-persist": "^6.0.0",
     "zod": "^3.24.1"
